maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
  
  while(isOverBaggle==false){
    mur()
  }
  pickUpBaggle();  
}
  
  


def mur(){
  
  left()
 	while(isFacingWall==true){
    right();
	}
  forward();
}